Refactor: #194 refine yps-body layout
ゲーム画面ヘッダとyps-bodyの左上が被らないように配置を調整した.
具体的には、ゲーム画面ヘッダ横幅(1280px) を最小横幅とし,
パディング10pxを挟んだ右側に yps-body を置く.

--- a/style-yps.css
+++ b/style-yps.css
@@ -4,15 +4,15 @@
 .yps-body {
 	white-space: pre-wrap;
 	position: absolute;
-	top: 75px; /* NaviBar 39px + margin 20px + spacer 16px */
-	left: 1260px;
+	top: 64px; /* game-header 40px + margin 20px */
+	left: 1298px; /* game-header 1280px + padding 10px + margin 8px */
 }
 .yps-history {
 	background: silver;
 }
 .yps-navi {
 	white-space: nowrap;
-	top: 25px; /* NaviBar 39px + margin 20px - 9px - 25px */
+	top: 8px; /* margin 8px */
 }
 .yps-cliptext {
 	position: fixed;
